Made components, model and bootstrapped UI

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <h1>App Component Initialized</h1>
       <app-server></app-server>
       <app-server></app-server>
