--- a/recipe-book/src/app/header/header.component.html
+++ b/recipe-book/src/app/header/header.component.html
@@ -9,10 +9,10 @@
         <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Recipe</a>
+                    <a class="nav-link active" aria-current="page" href="#" (click)="onSelect('recipe')">Recipes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Shopping List</a>
+                    <a class="nav-link active" aria-current="page" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
                   </li>
             </ul>
             <ul class="navbar-nav nav ms-auto">
