--- a/recipe-book/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/recipe-book/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,12 @@
-<p>recipe-item works!</p>
+<a href="#" class="list-group-item hover-change-color" (click)="onSelectRecipe()">
+    <div class="d-flex justify-content-between">
+        <div class="">
+            <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+            <p class="list-group-item-text">{{recipe.description}}</p>
+        </div>
+        <span class="">
+            <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px;">
+        </span>
+    </div>
+    <hr>
+</a>
