--- a/recipe-book/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/recipe-book/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -3,17 +3,17 @@
         <form>
             <div class="row my-3">
                 <div class="col-md-5 form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <label for="name" >Name</label>
+                    <input type="text" id="name" class="form-control" #ingredientName>
                 </div>
                 <div class="col-sm-2 form-group">
-                    <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <label for="amount" >Amount</label>
+                    <input type="number" id="amount" class="form-control" #ingredientAmount>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <button class="btn btn-success mx-1" type="submit">Add</button>
+                    <button class="btn btn-success mx-1" type="submit" (click)="addIngredient()">Add</button>
                     <button class="btn btn-danger mx-1" type="button">Delete</button>
                     <button class="btn btn-primary mx-1" type="button">Clear</button>
                 </div>
