--- a/recipe-book/src/app/header/header.component.html
+++ b/recipe-book/src/app/header/header.component.html
@@ -16,8 +16,8 @@
                   </li>
             </ul>
             <ul class="navbar-nav nav ms-auto">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                <li class="dropdown show" appDropdown>
+                    <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" role="button">Manage <span class="caret" ></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
                         <li><a href="#">Fetch Data</a></li>
