--- a/recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,7 +13,7 @@
         <div class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" appDropdown>Manage Recipe<span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="#">To Shopping List</a></li>
+                <li><a (click)="addToShoppingList()" style="cursor : pointer;">To Shopping List</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
@@ -30,3 +30,8 @@
         Ingredients
     </div>
 </div>
+<ul class="list-group">
+    <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+    </li>
+</ul>
