added routing in recipe-book

--- a/recipe-book/src/app/header/header.component.html
+++ b/recipe-book/src/app/header/header.component.html
@@ -9,18 +9,18 @@
         <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#" (click)="onSelect('recipe')">Recipes</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/recipes" routerLinkActive="active">Recipes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/shopping-list" routerLinkActive="active">Shopping List</a>
                   </li>
             </ul>
             <ul class="navbar-nav nav ms-auto">
                 <li class="dropdown show" appDropdown>
-                    <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" role="button">Manage <span class="caret" ></span></a>
+                    <a style="cursor : pointer;" class="dropdown-toggle" data-bs-toggle="dropdown" role="button">Manage <span class="caret" ></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                        <li><a style="cursor : pointer;">Save Data</a></li>
+                        <li><a style="cursor : pointer;">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
