--- a/recipe-book/src/app/header/header.component.html
+++ b/recipe-book/src/app/header/header.component.html
@@ -19,8 +19,8 @@
                 <li class="dropdown show" appDropdown>
                     <a style="cursor : pointer;" class="dropdown-toggle" data-bs-toggle="dropdown" role="button">Manage <span class="caret" ></span></a>
                     <ul class="dropdown-menu">
-                        <li><a style="cursor : pointer;">Save Data</a></li>
-                        <li><a style="cursor : pointer;">Fetch Data</a></li>
+                        <li><a style="cursor : pointer;" (click)="onSaveRecipe()">Save Data</a></li>
+                        <li><a style="cursor : pointer;" (click)="onFetchRecipe()">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
