--- a/recipe-book/src/app/header/header.component.html
+++ b/recipe-book/src/app/header/header.component.html
@@ -8,15 +8,21 @@
         </button>
         <div class="navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item"  *ngIf="isAuthenticated">
                     <a class="nav-link active" aria-current="page" routerLink="/recipes" routerLinkActive="active">Recipes</a>
+                  </li>
+                <li class="nav-item"  *ngIf="!isAuthenticated">
+                    <a class="nav-link active" aria-current="page" routerLink="/auth" routerLinkActive="active">Authenticate</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" routerLink="/shopping-list" routerLinkActive="active">Shopping List</a>
                   </li>
             </ul>
             <ul class="navbar-nav nav ms-auto">
-                <li class="dropdown show" appDropdown>
+                <li class="mx-3"  *ngIf="isAuthenticated">
+                    <a style="cursor : pointer;" (click)="onLogout()">Logout</a>
+                </li>
+                <li class="dropdown show" appDropdown *ngIf="isAuthenticated">
                     <a style="cursor : pointer;" class="dropdown-toggle" data-bs-toggle="dropdown" role="button">Manage <span class="caret" ></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor : pointer;" (click)="onSaveRecipe()">Save Data</a></li>
